tests/Errors/Generic/CodeAnalysis/EmptyStatement/DetectedDo.php
<?php

declare(strict_types=1);

do {
} while (false);
